<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="#f8f5fb"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewFlipper
                android:id="@+id/vfContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ProgressBar
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        tools:background="@drawable/poster"
                        android:id="@+id/image_backdrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/gradient_background"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="200dp"
                        android:id="@+id/card_item"
                        android:layout_marginTop="64dp"
                        app:cardElevation="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:cardCornerRadius="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/image_item"
                                tools:background="@drawable/poster_fairytail" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:id="@+id/card_item2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="70dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/card_item">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                tools:text="Fairy tail"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:id="@+id/text_name_item"
                                app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="160dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintEnd_toStartOf="@+id/text_score"
                                app:layout_constraintStart_toStartOf="parent" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                tools:text="Comedy,Fantasy,Harem"
                                android:id="@+id/text_genre"
                                android:layout_height="wrap_content"
                                app:layout_constraintEnd_toStartOf="@+id/text_score_item"
                                app:layout_constraintTop_toBottomOf="@+id/text_name_item"
                                app:layout_constraintStart_toStartOf="@+id/text_name_item"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                app:layout_constraintBottom_toBottomOf="@+id/text_score_item" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sinopsis"
                                android:textColor="@android:color/black"
                                android:textSize="14sp"
                                android:id="@+id/text_sinopsis"
                                app:layout_constraintTop_toBottomOf="@+id/text_genre"
                                android:layout_marginTop="16dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintStart_toStartOf="parent" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/score"
                                android:id="@+id/text_score"
                                android:textSize="12sp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="16dp"
                                android:textColor="@android:color/black"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@id/text_name_item" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:textColor="@android:color/white"
                                tools:text="8.94"
                                android:id="@+id/text_score_item"
                                android:gravity="center"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_background"
                                android:layout_marginEnd="8dp"
                                android:layout_marginTop="4dp"
                                android:padding="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/text_score"
                                app:layout_constraintEnd_toEndOf="parent" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="2dp"
                                android:background="#f8f5fb"
                                android:id="@+id/view"
                                app:layout_constraintTop_toBottomOf="@+id/text_sinopsis"
                                app:layout_constraintEnd_toEndOf="@+id/text_sinopsis"
                                app:layout_constraintStart_toStartOf="@+id/text_sinopsis" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="16dp"
                                android:scrollHorizontally="true"
                                android:id="@+id/text_sinopsis_item"
                                android:scrollbars="vertical"
                                android:layout_marginBottom="8dp"
                                app:layout_constraintBottom_toTopOf="@+id/text_youtube_title"
                                app:layout_constraintTop_toBottomOf="@+id/view"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                tools:text="@string/dummy_sinopsis" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/video"
                                android:textColor="@android:color/black"
                                android:textSize="14sp"
                                android:id="@+id/text_youtube_title"
                                app:layout_constraintTop_toBottomOf="@+id/text_sinopsis_item"
                                android:layout_marginTop="16dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintStart_toStartOf="parent" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="2dp"
                                android:background="#f8f5fb"
                                android:id="@+id/view2"
                                app:layout_constraintTop_toBottomOf="@+id/text_youtube_title"
                                app:layout_constraintEnd_toEndOf="@+id/text_youtube_title"
                                app:layout_constraintStart_toStartOf="@+id/text_youtube_title" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="18dp"
                                android:id="@+id/rv_video"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                android:orientation="horizontal"
                                tools:listitem="@layout/item_video"
                                app:layout_constraintTop_toBottomOf="@+id/view2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_error"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    tools:text="Error Get Aplikasi" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/empty_data" />
            </ViewFlipper>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_background"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_arrow_back_white_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>